# lyra

./: .gitignore  README.md  apm.yml  conftest.py  justfile  pyproject.toml
.apm/agents/: docs-updater-subagent.agent.md  python-code-reviewer-subagent.agent.md  python-test-writer-subagent.agent.md
.github/: copilot-instructions.md
.github/workflows/: add_pr_to_project.yml
agents/: docs-updater-subagent.agent.md  python-code-reviewer-subagent.agent.md  python-code-writer-subagent.agent.md  python-conductor.agent.md  python-formatter-subagent.agent.md  python-planner-subagent.agent.md  python-test-writer-subagent.agent.md
agents/nextflow/: conductor.agent.md  nextflow-conductor.agent.md
agents/nextflow/nextflow-subagents/: code-review-subagent.agent.md  impliment-subagent.agent.md  nextflow-code-review-subagent.agent.md  nextflow-docs-updater-subagent.agent.md  nextflow-e2e-test-subagent.agent.md  nextflow-impliment-subagent.agent.md  nextflow-planning-subagent.agent.md  nextflow-seqera-ai-subagent.agent.md  planning-subagent.agent.md  seqera-ai-subagent.agent.md
agents/python/: python-conductor.agent.md  python-focused-conductor-subagent.agent.md  python-focused-conductor.agent.md
agents/python/python-subagents/: docs-updater-subagent.agent.md  python-acceptance-subagent.agent.md  python-code-reviewer-subagent.agent.md  python-code-writer-subagent.agent.md  python-docs-updater-subagent.agent.md  (+4 more)
agents/scoping/: scoping-project-agent.agent.md
docs/: hooks-implementation-roadmap.md  using-the-scoping-agent.md  welcome-to-lyra.md
hooks/python-quality-gate/: apm.yml  python-quality-gate.json  python-quality-gate.py
instructions/: airflow.instructions.md  nextflow.instructions.md  python.instructions.md
sandbox/: README.md
skills/airflow-debugging-dags/: SKILL.md
skills/airflow-testing-dags/: SKILL.md
skills/airflow-writing-dags/: SKILL.md
skills/bioinformatic-tool-selection/: SKILL.md
skills/nextflow-diagram-creation/: SKILL.md
skills/nextflow-pipeline-debugging/: SKILL.md
skills/nf-core-modules-subworkflows/: SKILL.md
skills/pipeline-debugging/: SKILL.md
workflows/: pr-changelog-generator.md
(+11 files in other folders)
